rotated the gesture display for a more realistic game and fixed the window to stop collapsing when the window is shrinking

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,20 @@
 body{
     width: inherit; height: 100vh;
     font-family: 'Quicksand', sans-serif;
+    display: flex;
+    justify-content: center;
+    overflow-y: hidden;
+    background-color: bisque;
 }
 
 ul{
     list-style: none;
+}
+
+.main-window{
+    width: 75em; height: 100vh;
+    border: 6px solid black;
+    background-color: white;
 }
 /** Panels */
 
@@ -32,7 +42,7 @@ ul{
 .player-container,
 .display-container,
 .computer-container{
-    width: 100%;height: 40em; 
+    width: 100em;height: 40em; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,14 +50,9 @@ ul{
 
 }
 
-
 .player-container,
 .computer-container{
     gap: 2em;
-}
-
-.gesture-display{
-    transform: rotate(29);
 }
 
 
@@ -72,11 +77,11 @@ ul{
 /** Display */
 
 .text-display{
-    font-size: 5vmin;
+    font-size: 2em;
 }
 
 .gesture-display{
-    width: 25vmin;
+    width: 13em;
     user-select: none;
 
 }
@@ -85,6 +90,19 @@ ul{
     font-size: 1.6em;
 
 }
+
+.gesture-display{
+    transform: rotate(-90deg) scale(1.1) ;
+    -webkit-transform: rotate(90deg) scale(1.1) ;
+    -moz-transform: rotate(90deg) scale(1.1) ;
+}
+
+.computer-container > .gesture-display{
+    transform: rotate(-90deg) scaleY(-1) ;
+    -webkit-transform: rotate(90deg) scaleY(-1) ;
+    -moz-transform: rotate(90deg) scaleY(-1) ;
+}
+
 
 /** Scoring panel*/
 
